--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^9.2.1"
+  },
+  "dependencies": {
+    "qrcode.react": "^4.2.0"
   }
 }
